# ChangeLog for dev-python/gnome-vfs-python
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/gnome-vfs-python/ChangeLog,v 1.9 2009/04/28 14:27:37 armin76 Exp $

  28 Apr 2009; Raúl Porcel <armin76@gentoo.org>
  gnome-vfs-python-2.22.3.ebuild:
  arm/sh stable

  23 Mar 2009; Jeroen Roovers <jer@gentoo.org>
  gnome-vfs-python-2.22.3.ebuild:
  Stable for HPPA (bug #257004).

  17 Mar 2009; Raúl Porcel <armin76@gentoo.org>
  gnome-vfs-python-2.22.3.ebuild:
  ia64/sparc stable wrt #258040

  08 Mar 2009; Markus Meier <maekke@gentoo.org>
  gnome-vfs-python-2.22.3.ebuild:
  amd64/x86 stable, bug #258040

  05 Mar 2009; Brent Baude <ranger@gentoo.org>
  gnome-vfs-python-2.22.3.ebuild:
  Marking gnome-vfs-python-2.22.3 ppc stable for bug 258040

  03 Mar 2009; Brent Baude <ranger@gentoo.org>
  gnome-vfs-python-2.22.3.ebuild:
  Marking gnome-vfs-python-2.22.3 ppc64 stable for bug 258040

  14 Feb 2009; Tobias Klausmann <klausman@gentoo.org>
  gnome-vfs-python-2.22.3.ebuild:
  Stable on alpha, bug #258040

*gnome-vfs-python-2.22.3 (26 Sep 2008)

  26 Sep 2008; Mart Raudsepp <leio@gentoo.org>
  +gnome-vfs-python-2.22.3.ebuild:
  Version bump

*gnome-vfs-python-2.22.1 (24 Aug 2008)

  24 Aug 2008; Arun Raghavan <ford_prefect@gentoo.org> +metadata.xml,
  +gnome-vfs-python-2.22.1.ebuild:
  Initial import of gnome-python split ebuilds. This package installs
  bindings for the GnomeVFS library.
