@@ -1,4 +1,6 @@
 DIST gnome-python-2.22.3.tar.bz2 588459 RMD160 81772db78abe864dcbf3c89b7f864dd3b8ba41d3 SHA1 35eafe4f5ab9ee003a573dcf26699d3b03d52d5a SHA256 a1763ef40aa0fc152e1afe6be6b01d69ba305273bd4bd44cad018da42d1bb559
+DIST gnome-python-2.26.1.tar.bz2 523132 RMD160 054901ecd209953225ccfa725fdd9164447fbb49 SHA1 789627d4107aa50cd7fc763c4de015032346524e SHA256 ede0203f1eec22b3ed4a91c7b769e437859e5bc4b89a8f8e80b3f7ca62317098
 EBUILD gnome-vfs-python-2.22.3.ebuild 689 RMD160 3f5e718c2a0980bd2ad3a15cddeb955f319488d6 SHA1 153b6b59735f8f7cc370fd46049e3427585e2914 SHA256 4c3117441dd2eb8a7b16c6983627abe7b0a9afcf188e6f363fb460063464b109
-MISC ChangeLog 1471 RMD160 960d25e0886f7e8312e7382b3fe5770334a1cb24 SHA1 0dd507ffd81621142cd0d3d003f7f76a907b6b8a SHA256 eea4ffff8fcca158f493a366cc3d081a936cb37ff5df1dc02aa7a17e87cd40d5
+EBUILD gnome-vfs-python-2.26.1.ebuild 685 RMD160 29e5c9189e453e8955a45a7e47de6fc5c8d67285 SHA1 10f3ea93a64d40fbba811f3be0c82e8dc1734baa SHA256 9f3db492896fb6fb0b2bbafa4536535b0e5d71bfb88a069dfc92fcd3bb299ebb
+MISC ChangeLog 1685 RMD160 027967b8e04c92006b753464788d325a93b34282 SHA1 470de3644344034e03e1f669d6b344381c30c86e SHA256 1947de73c850b238287b3a9d3c8ae5262c83baed7f975106e0162a32bb765be0
 MISC metadata.xml 178 RMD160 ec0937689a645defb2b870b481c4d4db57a0fa73 SHA1 aa77d904544ca6e6e684658ec652463fdb2ca58d SHA256 ccdf4a821074a281d4fd442460b65f57e77546cea36756c435db5529d22fa2a6
