@@ -1,0 +1,22 @@
+# Copyright 1999-2009 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/dev-python/gnome-vfs-python/gnome-vfs-python-2.26.1.ebuild,v 1.1 2009/05/10 21:48:29 eva Exp $
+
+G_PY_PN="gnome-python"
+G_PY_BINDINGS="gnomevfs gnomevfsbonobo pyvfsmodule"
+
+inherit gnome-python-common
+
+DESCRIPTION="Python bindings for the GnomeVFS library"
+LICENSE="LGPL-2.1"
+SLOT="2"
+KEYWORDS="~x86-freebsd ~x86-interix ~amd64-linux ~x86-linux"
+IUSE="doc examples"
+
+RDEPEND=">=gnome-base/gnome-vfs-2.24.0
+	>=gnome-base/libbonobo-2.8
+	!<dev-python/gnome-python-2.22.1"
+DEPEND="${RDEPEND}"
+
+EXAMPLES="examples/vfs/*
+	examples/vfs/pygvfsmethod/"
